[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/theme/transparent_panel_rounded_corner.tres" type="StyleBox" id=1]
[ext_resource path="res://art/images/clown.jpg" type="Texture" id=2]
[ext_resource path="res://artiphonie/utility/listen_and_speak/listen_and_speak.gd" type="Script" id=3]
[ext_resource path="res://assets/background.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/record.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/speaker.png" type="Texture" id=6]
[ext_resource path="res://assets/theme/ButtonTheme.tres" type="Theme" id=7]

[node name="listen_and_speak" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="correct" type="AudioStreamPlayer" parent="."]

[node name="incorrect" type="AudioStreamPlayer" parent="."]

[node name="background" type="Panel" parent="."]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
rect_clip_content = true
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout_1" type="Control" parent="background"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="word" type="Label" parent="background/layout_1"]
anchor_top = 0.02
anchor_right = 1.0
anchor_bottom = 0.05
text = "Clown"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="listen" type="TextureButton" parent="background/layout_1"]
anchor_left = 0.05
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.4
margin_left = -3.8147e-06
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="picture" type="TextureRect" parent="background/layout_1"]
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.5
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="record" type="TextureButton" parent="background/layout_1"]
anchor_left = 0.8
anchor_top = 0.2
anchor_right = 0.95
anchor_bottom = 0.4
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="borel_maisonny_container" type="HBoxContainer" parent="background/layout_1"]
anchor_left = 0.01
anchor_top = 0.55
anchor_right = 0.99
anchor_bottom = 0.98
margin_left = -3.8147e-06
grow_horizontal = 2
rect_min_size = Vector2( 921.6, 259.2 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 677.411
margin_bottom = 718.411
text = "YO"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="background/layout_1/listen" to="." method="_on_listen_pressed"]
[connection signal="pressed" from="background/layout_1/record" to="." method="_on_record_pressed"]
